@@ -5,20 +5,17 @@ Things To Do
 :revision: $Rev$
 :date: $LastChangedDate$
 
-* Generate documentation for the standard validators.
-
 * Make a test fixture for validators, to make testing really easy.
 
 * Consider moving htmlfill to ElementTree or another DOM-ish
-  structure, instead of HTMLParser.
+  structure, instead of HTMLParser.  Or re-implement with another
+  parser but same interface.
 
 * Generate Javascript for validators, for client-side validation (when
   possible).
 
-* At least test and give recipes for Ajax-ish validation, when fully
-  client-side validation doesn't work.  (Client side is more
-  interesting to me, though -- Ajax still does a server query, and
-  isn't much better than a full submit)
+* Relatedly, test and give recipes for Ajax-ish validation, when fully
+  client-side validation doesn't work.
 
 * Better tests for ``htmlfill`` and ``htmlfill_schemabuilder``.
 
@@ -36,9 +33,11 @@ Things To Do
 * Make ``doctest_xml_compare`` work with wildcards/ellipses.  Maybe
   with non-XHTML.
 
-* Figure out how the heck to get this to scale to really small forms.
-  Does it make any sense there?  When does it start making sense to
-  use FormEncode?
+* Maybe include `wareweb.packing
+  <http://pythonpaste.org/wareweb/module-wareweb.packing.html>`_,
+  which is kind like like one-way validation for really small forms.
+  A compliment/alternative to `variabledecode
+  <module-formencode.variabledecode.html>`_.
 
 * Some more ways to build validation.  Validation from docstrings or
   method signatures.
